<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/authimageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/splash"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="invisible"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/fieldEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:autofillHints=""
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:theme="@style/EditTextColorControl" />

                <EditText
                    android:id="@+id/fieldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:autofillHints=""
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:theme="@style/EditTextColorControl" />

                <LinearLayout
                    android:id="@+id/emailPasswordButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <Button
                        android:id="@+id/emailCreateAccountButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="@string/create_account"
                        android:textColor="@color/colorWhite"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/emailSignInButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="@string/sign_in"
                        android:textColor="@color/colorWhite"
                        tools:ignore="ButtonStyle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sendresetpassbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:gravity="center"
                        android:text="@string/forget_password"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/topprivacypolicy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="50dp"
                        android:gravity="center"
                        android:text="@string/privacypolicy"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/topadview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-1585283309075901/4381654099"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>